# BeatForge

./: CMakeLists.txt  Drum.cpp  Drum.h  DrumKit.cpp  DrumKit.h  DrumKitWidget.cpp  DrumKitWidget.h  DrumWidget.cpp  DrumWidget.h  MainWindow.cpp  MainWindow.h  Metronome.cpp  Metronome.h  MetronomeWidget.cpp  MetronomeWidget.h  Pattern.h  README.md  StepButton.cpp  StepButton.h  main.cpp  test.cpp
UnitTest/: CMakeLists.txt  UnitTest.cpp
src/: DisplayWidget.cpp  DisplayWidget.h  Drum.cpp  Drum.h  DrumKit.cpp  DrumKit.h  DrumKitWidget.cpp  DrumKitWidget.h  DrumWidget.cpp  DrumWidget.h  Enum.h  MainWindow.cpp  MainWindow.h  Metronome.cpp  Metronome.h  MetronomeWidget.cpp  MetronomeWidget.h  MyDial.cpp  MyDial.h  Observer.h  Pattern.cpp  Player.cpp  Player.h  PlayerWidget.cpp  PlayerWidget.h  StepButton.cpp  StepButton.h  Subject.h  Timeline.cpp  Timeline.h  main.cpp
